added publish and changelog
Took 11 minutes

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'maven-publish'
     id 'idea'
+    id "me.modmuss50.mod-publish-plugin" version "0.3.3"
 }
 
 archivesBaseName = "${mod_id}-fabric-${minecraft_version}"
@@ -97,4 +98,26 @@ publishing {
             url "file://" + System.getenv("local_maven")
         }
     }
+}
+publishMods {
+    file = remapJar.archiveFile
+    changelog = project(":Common").file("changelog.md").text
+    type = STABLE
+    modLoaders.add("fabric")
+    displayName = "${mod_id}-${minecraft_version}-fabric-${project.property('version')}"
+    if (curseforge_publishing_enabled.toBoolean()) {
+        curseforge {
+            projectId = curseforge_project_id
+            accessToken = curseforge_token
+            minecraftVersions.add(minecraft_version)
+        }
+    }
+    if (modrinth_publishing_enabled.toBoolean()) {
+        modrinth {
+            accessToken = modrinth_token
+            projectId = modrinth_project_id
+            minecraftVersions.add(minecraft_version)
+        }
+    }
+
 }
