--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'org.spongepowered.mixin' version '0.7.+'
+    id "me.modmuss50.mod-publish-plugin" version "0.3.3"
 }
 
 archivesBaseName = "${mod_id}-forge-${minecraft_version}"
@@ -136,4 +137,26 @@ publishing {
             url "file://" + System.getenv("local_maven")
         }
     }
+}
+publishMods {
+    file = jar.archiveFile
+    changelog = project(":Common").file("changelog.md").text
+    type = STABLE
+    modLoaders.add("forge")
+    displayName = "${mod_id}-${minecraft_version}-forge-${project.property('version')}"
+    if (curseforge_publishing_enabled.toBoolean()) {
+        curseforge {
+            projectId = curseforge_project_id
+            accessToken = curseforge_token
+            minecraftVersions.add(minecraft_version)
+        }
+    }
+    if(modrinth_publishing_enabled.toBoolean()){
+        modrinth {
+            accessToken = modrinth_token
+            projectId = modrinth_project_id
+            minecraftVersions.add(minecraft_version)
+        }
+    }
+
 }
