--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,9 @@ mod_description=Adds various plushies with different perks to Minecraft, along w
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Publishing
+curseforge_publishing_enabled=false
+curseforge_project_id=867232
+modrinth_publishing_enabled=false
+modrinth_project_id=0
