Update mod description

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ fabric_loader_version_range=>=0.14
 mod_name=Perfect Plushies
 mod_author=SirJain, Nyfaria
 mod_id=perfectplushies
-mod_description=Adds various plushies with different perks to Minecraft, along with some Easter Eggs!
+mod_description=Adds various decorative plushies to Minecraft, along with some Easter Eggs!
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
