tag optimization, player plushie loot added to treasure chests
Took 46 minutes

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -104,7 +104,7 @@ publishMods {
     changelog = project(":Common").file("changelog.md").text
     type = STABLE
     modLoaders.add("fabric")
-    displayName = "${mod_id}-${minecraft_version}-fabric-${project.property('version')}"
+    displayName = "${mod_name}[Fabric] ${project.property('version')}"
     if (curseforge_publishing_enabled.toBoolean()) {
         curseforge {
             projectId = curseforge_project_id
