--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -53,7 +53,8 @@ def replaceProperties =
                 forge_version_range: forge_version_range,
                 loader_version_range: loader_version_range,
                 fabric_loader_version_range: fabric_loader_version_range,
-                minecraft_version: minecraft_version
+                minecraft_version: minecraft_version,
+                geckolib_version_range: geckolib_version
         ]
 
 processResources {
@@ -105,6 +106,7 @@ publishMods {
     type = STABLE
     modLoaders.add("fabric")
     displayName = "${mod_name}[Fabric] ${project.property('version')}"
+    dryRun = dry_run.toBoolean()
     if (curseforge_publishing_enabled.toBoolean()) {
         curseforge {
             projectId = curseforge_project_id
