--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-version=1.0.0
+version=1.1.0
 group=io.github.sirjain0.perfectplushies
 
 # Common
@@ -12,6 +12,7 @@ common_client_run_name=Common Client
 common_server_run_name=Common Server
 regutils_version=1.20-1.1.0
 geckolib_version=4.2.1
+geckolib_version_range=[4.2.0,5.0.0)
 
 # Forge
 forge_version=47.0.3
@@ -40,7 +41,8 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Publishing
-curseforge_publishing_enabled=false
+curseforge_publishing_enabled=true
 curseforge_project_id=867232
 modrinth_publishing_enabled=false
 modrinth_project_id=0
+dry_run=false
