--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -144,13 +144,16 @@ publishMods {
     changelog = project(":Common").file("changelog.md").text
     type = STABLE
     modLoaders.add("forge")
-    displayName = "${mod_name}[Forge] ${project.property('version')}"
+    displayName = "${mod_name} ${project.property('version')} [Forge]"
     dryRun = dry_run.toBoolean()
     if (curseforge_publishing_enabled.toBoolean()) {
         curseforge {
             projectId = curseforge_project_id
             accessToken = curseforge_token
             minecraftVersions.add(minecraft_version)
+            requires {
+                slug = "geckolib"
+            }
         }
     }
     if (modrinth_publishing_enabled.toBoolean()) {
