geckolib version range fix
Took 8 minutes

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ subprojects {
     
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
     java.withSourcesJar()
-    java.withJavadocJar()
+//    java.withJavadocJar()
         
     jar {
         from(rootProject.file("LICENSE")) {
