--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
     compileOnly "software.bernie.geckolib:geckolib-forge-1.20.1:${geckolib_version}"
+    implementation "fuzs.forgeconfigapiport:forgeconfigapiport-common:${project.forge_config_api_port_version}"
 }
 sourceSets.main.resources.srcDir './src/generated/resources'
 processResources {
