--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
     implementation project(":Common")
     modImplementation "software.bernie.geckolib:geckolib-fabric-1.20.1:${geckolib_version}"
+    modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
+    include "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
 }
 
 loom {
