--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,11 @@ common_server_run_name=Common Server
 regutils_version=1.20-1.1.0
 geckolib_version=4.2.1
 geckolib_version_range=[4.2.0,5.0.0)
+forge_config_api_port_version=8.0.0
 
 # Forge
 forge_version=47.0.3
-//forge_ats_enabled=true
+forge_ats_enabled=true
 minecraft_version_range=[1.20,1.21)
 forge_version_range=[47,)
 loader_version_range=[47,)
