--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -16,10 +16,11 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
-    implementation project(":Common")
+    compileOnly project(":Common")
     modImplementation "software.bernie.geckolib:geckolib-fabric-1.20.1:${geckolib_version}"
     modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
     include "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
+    modImplementation include("com.nyfaria.perfectplushieapi:perfectplushieapi-fabric-1.20.1:${plushie_api_version}")
 }
 
 loom {
