--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,6 @@ curseforge_project_id=867232
 modrinth_publishing_enabled=true
 modrinth_project_id=L5MLckDN
 dry_run=false
+
+# Dependencies
+plushie_api_version=0.1.1
