fix forge jarJar

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -125,6 +125,9 @@ publishMods {
             accessToken = modrinth_token
             projectId = modrinth_project_id
             minecraftVersions.add(minecraft_version)
+            requires {
+                slug = "geckolib"
+            }
         }
     }
 
