--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-version=1.12.0
+version=1.13.3
 group=io.github.sirjain0.perfectplushies
 
 # Common
@@ -47,6 +47,8 @@ curseforge_project_id=867232
 modrinth_publishing_enabled=true
 modrinth_project_id=L5MLckDN
 dry_run=false
+publish_fabric=false
+publish_forge=true
 
 # Dependencies
-plushie_api_version=0.1.1
+plushie_api_version=1.0.7
