--- a/gradle.properties
+++ b/gradle.properties
@@ -4,31 +4,34 @@ group=io.github.sirjain0.perfectplushies
 
 # Common
 minecraft_version=1.20.1
-mappings_channel=parchment
-mappings_version=2023.07.16-1.20.1
+parchment_minecraft=1.20.1
+parchment_version=2023.09.03
 common_aws_enabled=true
 common_runs_enabled=false
 common_client_run_name=Common Client
 common_server_run_name=Common Server
-regutils_version=1.20-1.1.0
+regutils_version=1.20.1-2.0.2
 geckolib_version=4.2.1
 geckolib_version_range=[4.2.0,5.0.0)
-forge_config_api_port_version=8.0.0
+forge_config_api_port_version=8.0.3
+java_version=17
+license=ARR
+credits=
 
 # Forge
-forge_version=47.0.3
+forge_version=47.1.3
 forge_ats_enabled=true
 minecraft_version_range=[1.20,1.21)
 forge_version_range=[47,)
-loader_version_range=[47,)
+forge_loader_version_range=[47,)
 mixin_version=0.8.5
 capabilitysyncer_version=1.20.1-4.0.0
 capabilitysyncer_version_range=[4.0.0,5.0.0)
 
 # Fabric
-fabric_version=0.83.1+1.20.1
+fabric_version=0.92.1+1.20.1
 fabric_aws_enabled=true
-fabric_loader_version=0.14.21
+fabric_loader_version=0.16.7
 fabric_loader_version_range=>=0.14
 
 # Mod options
@@ -47,8 +50,8 @@ curseforge_project_id=867232
 modrinth_publishing_enabled=true
 modrinth_project_id=L5MLckDN
 dry_run=false
-publish_fabric=false
+publish_fabric=true
 publish_forge=true
 
 # Dependencies
-plushie_api_version=1.0.7
+plushie_api_version=1.1.0
