--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -1,23 +1,20 @@
 plugins {
     id 'multiloader-loader'
     id 'fabric-loom'
-    id 'maven-publish'
-    id 'idea'
     id "me.modmuss50.mod-publish-plugin" version "0.3.3"
 }
 
-archivesBaseName = "${mod_id}-fabric-${minecraft_version}"
 
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
     mappings loom.layered() {
         officialMojangMappings()
-        parchment("org.parchmentmc.data:parchment-1.20.1:2023.07.09@zip")
+        parchment("org.parchmentmc.data:parchment-${parchment_minecraft}:${parchment_version}@zip")
     }
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
-    compileOnly project(":Common")
+    implementation project(":Common")
     modImplementation "software.bernie.geckolib:geckolib-fabric-1.20.1:${geckolib_version}"
     modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
     include "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forge_config_api_port_version}"
@@ -46,68 +43,7 @@ loom {
         defaultRefmapName = "${mod_id}.refmap.json"
     }
 }
-def resourceTargets = ['META-INF/mods.toml', 'pack.mcmeta', "${mod_id}.mixins.json".toString(), 'fabric.mod.json']
-def intoTargets = ["$rootDir/out/production/resources/", "$rootDir/out/production/${project.name}.main/", "$rootDir/bin/main/"]
-def replaceProperties =
-        [
-                mod_id                     : mod_id,
-                mod_name                   : mod_name,
-                version                : version,
-                mod_author                : mod_author,
-                mod_description            : mod_description,
-                minecraft_version_range    : minecraft_version_range,
-                forge_version_range        : forge_version_range,
-                forge_loader_version_range       : forge_loader_version_range,
-                fabric_loader_version_range: fabric_loader_version_range,
-                minecraft_version          : minecraft_version,
-                geckolib_version_range     : geckolib_version
-        ]
-
-processResources {
-    from project(":Common").sourceSets.main.resources
-    inputs.properties replaceProperties
-    replaceProperties.put 'project', project
-
-    filesMatching(resourceTargets) {
-        expand replaceProperties
-    }
-
-    intoTargets.each { target ->
-        if (file(target).exists()) {
-            copy {
-                from(sourceSets.main.resources) {
-                    include resourceTargets
-                    expand replaceProperties
-                }
-                into target
-            }
-        }
-    }
-
-}
-
-tasks.withType(JavaCompile) {
-    source(project(":Common").sourceSets.main.allSource)
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            groupId project.group
-            artifactId project.archivesBaseName
-            version project.version
-            afterEvaluate {
-                artifact tasks.named("remapJar")
-            }
-        }
-    }
-
-    repositories {
-        maven {
-            url "file://" + System.getenv("local_maven")
-        }
-    }
-}
+reg.configureJarTask(remapJar)
 publishMods {
     if(publish_fabric.asBoolean()) {
         file = remapJar.archiveFile
